2002-11-21  Emmanuel Beffara  <manu@beffara.org>

	* NEWS: Introduced the NEWS file.

	* src/__init__.py (Message), ...: Added the short error reporting
	style, introduced --short for it in rubber and rubber-info.

2002-11-17  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added the processed_sources variable to avoid
	looping when some source includes itself.

2002-11-14  Emmanuel Beffara  <manu@beffara.org>

	* all: Centralized the definition of _ in the main module to
	prepare for proper gettextization.

	* src/__init__.py: Fixed an error in line number matching.

2002-11-13  Emmanuel Beffara  <manu@beffara.org>

	* setup.py (do_check): Added checks for system-specific features.

	* src/__init__.py: Modified the execute method so that it reads
	the standard output of the external program (thus avoiding possible
	deadlocks and allowing for output redirection).

	* rubber.in, man/:  Added a relevant return code to the command-line.

	* src/cmdline.py, src/__init__.py: Moved the report of compilation
	errors out of the main source into the command-line interface.

2002-11-12  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Restructured message displaying, by introducing
	msg.error() and msg.abort() and moving "nothing to be done" out of the
	main system.

2002-11-08  Emmanuel Beffara  <manu@beffara.org>

	* configure: Fixed the way we search for Python.

2002-11-07  Emmanuel Beffara  <manu@beffara.org>

	* src/util.py (Depend.make): Fixed date calculation to interact
	well with getmtime().

2002-11-06  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py: Added a check so to handle the case where
	someone else has run BibTeX, and removed the unportable "-terse"
	command-line option. And yes, after the release >:-(

	* Version 0.99.4 released.

	* src/__init__.py, src/modules/minitoc.py: Fixed file name computation
	for minitoc and multiple .aux files.

	* src/graphics/epstopdf.py: Hacked the epstopdf command to make it